<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Ring Controller</string>
    <string name="btnTest">Measure ambient noise</string>
    <string name="btnTestNotification">Send a test notification</string>
    <string name="buy">Buy</string>
    <string name="buyDonation">Donate</string>
    <string name="buyPro">Buy full version</string>
    <string name="categoryBehaviour">Behaviour</string>
    <string name="dialog_message_thank_you">Thank you very much!</string>
    <string name="dialog_message_pending_purchase">Your purchase was not yet confirmed by Google Play.</string>
    <string name="dialog_message_already_owned">This item was already bought.</string>
    <string name="dialog_title_thank_you">Thanks</string>
    <string name="disconnectWhenFaceDown">Disable data connections.</string>
    <string name="edit">edit</string>
    <string name="managePermissions">Manage permissions</string>
    <string name="msgTestNotification">This is a test notification.</string>
    <string name="notification_listener">Notification listener</string>
    <string name="notification_listeners">Notification access</string>
    <string name="notification_listener_message">Please grant access to notifications.</string>
    <string name="notificationChannelNameStatus">Status messages</string>
    <string name="notificationChannelDescStatus">Notification channel for status messages</string>
    <string name="notificationChannelNameTTS">Text-to-speech service</string>
    <string name="notificationChannelDescTTS">This notification indicates when text-to-speech is active.</string>
    <string name="notificationChannelNameRingerService">Volume service</string>
    <string name="notificationChannelDescRingerService">This notification indicates when the automatic volume controller is active.</string>
    <string name="notificationSoundUri">Notification sound</string>
    <string name="preferences">Preferences</string>
    <string name="product_name_donation">Donation</string>
    <string name="product_name_pro">Full version</string>
    <string name="product_name_trial">Trial version</string>
    <string name="radio_TTS_always"> … always via speakerphone.</string>
    <string name="radio_TTS_headphones"> … with headphones.</string>
    <string name="showDnDNotification">Notification</string>
    <string name="showDnDNotificationSummary">Show a persistent notification while "Do not disturb" is activated.</string>
    <string name="setting_max_amplitude">Maximum</string>
    <string name="setting_min_amplitude">Minimum</string>
    <string name="setting_min_ringer_volume">Minimum ringer volume</string>
    <string name="soundSettings">Sound preferences</string>
    <string name="switch_handle_ambient_noise">of the ringer.</string>
    <string name="switch_handle_notification">Notifications</string>
    <string name="switch_handle_vibration">Vibration</string>
    <string name="tabAbout">About</string>
    <string name="tabSettings">Settings</string>
    <string name="tabTest">Test</string>
    <string name="tabTTS">TTS</string>
    <string name="title_handle_ambient_noise">Volume</string>
    <string name="title_increasing_ringer_volume">Increasing ringer volume</string>
    <string name="TTS_AnnounceCall">Call from</string>
    <string name="tts_settings">Text-to-speech settings</string>
    <string name="tvAutoReactivateRingerMode">Automagically reactivate ringer mode (increased battery usage).</string>
    <string name="tvBrokenProximitySensor">Additionally use light sensor for pocket detection.</string>
    <string name="tvCalculatedVolume">Resulting ringer volume</string>
    <string name="tvFlipAction">Flip device to mute ringer.</string>
    <string name="tvInCallActions">Actions</string>
    <string name="tvNoiseLevels">Noise levels</string>
    <string name="tvPocketVolume">Increase volume in pocket by </string>
    <string name="tvPullOutAction"> … is uncovered.</string>
    <string name="tvReduceVolume">Reduce the ringer volume when the device …</string>
    <string name="tvShakeAction"> … is shaken.</string>
    <string name="tvSilenceVolume">Mute the ringer</string>
    <string name="tvSilentWhilePebbleConnected">Pebble connected</string>
    <string name="tvTTSenabled">text-to-speech engine</string>
    <string name="tvTTSmode">Enable TTS …</string>
    <string name="screenNotifications">Notifications</string>
    <string name="screenNotificationsSummary">Control the volume of notifications.</string>
    <string name="screenOptions">Do not disturb actions</string>
    <string name="screenOptionsSummary">Actions to mute the ringer, e.g. flip to silence.</string>
    <string name="screenTTS">Text-to-speech</string>
    <string name="screenTTSSummary">Read out notifications and incoming caller names.</string>
    <string name="screenVibration">Vibration</string>
    <string name="screenVibrationSummary">Turn on vibration when appropriate.</string>
    <string name="screenVolume">Automatic volume control</string>
    <string name="screenVolumeSummary">Control how the ringer volume is determined.</string>
    <string name="systemSoundSummary">
        For best results you should disable the default notification sound.
    </string>
    <string name="systemVibrationSummary">
        You should disable vibrations for incoming calls and notificatiosn.
    </string>
    <string name="titleSilenceMode">Silence mode.</string>
    <string name="msgRestoreRingerMode">Click to restore normal mode.</string>
    <string name="tvWelcome">
       <![CDATA[
        <p>
        SmartRingController adjusts the ringer volume
        automatically according to the ambient noise level. It also reads out notifications.</p>
        <p>
        The service is currently <em>INACTIVE</em>. To enable the service
        use the switch in the action bar.</p>
        ]]>
    </string>
    <string name="titleContribute">Contribute</string>
    <string name="titleDonate">Donate</string>
    <string name="tvAbout">
If you like this app, please rate it. If you find errors or
if you are missing any feature, please contact the author
rather than giving a negative rating.\n\n

This software may not be free from defects. It is used on
your own risk. The author is not liable for
direct, indirect, incidential or consequential damage.
    </string>
    <string name="titleAboutCredits">Author</string>
    <string name="titlePrivacyPolicy">Privacy Policy</string>
    <string name="summaryAboutCredits">Stefan Fruhner (stefan.fruhner@gmail.com)</string>
    <string name="titleAboutLanguages">
        Languages
    </string>
    <string name="summaryAboutLanguages">
        English, German : Stefan Fruhner\nSpanish, Catalan : Jaume Hernandez
    </string>
    <string name="tvExplanationNoiseLevels">
        The ringer volume is set
        according to the current noise level the microphone detects. The noise levels
        correspond to the minimum and the maximum ringer volume.
    </string>
    <string name="tvExplanationMinimumLevel">
        Select the level of ambient noise for which the lowest
        ringer volume is suitable (default:0).
    </string>
    <string name="tvExplanationMaximumLevel">
        Select the level of ambient noise for which the highest
        ringer volume is needed. Increase this value if your ringer is too loud
        in silent situations. Decrease it if your ringer should be louder in
        silent situations  (default:7000).
    </string>
</resources>
