<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_alignParentTop="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="5dp"
	>

	<TextView
			android:id="@+id/tvNoiseLevels"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvNoiseLevels"
			android:layout_weight="1"
			android:layout_marginTop="20dp"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_alignParentLeft="true"
	/>

	<TextView
			android:id="@+id/tvExplanationNoiseLevels"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvExplanationNoiseLevels"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/tvNoiseLevels"
	/>


	<TextView
			android:id="@+id/tvMinAmplitude"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_min_amplitude"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/tvExplanationNoiseLevels"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_marginTop="10dp"
			/>

	<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="min. Volume"
			android:max="10000"
			android:progress="1000"
			android:id="@+id/SeekBarMin"
			android:layout_below="@+id/tvMinAmplitude"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<TextView
			android:id="@+id/tvExplanationMinimumLevel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvExplanationMinimumLevel"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/SeekBarMin"
	/>


	<TextView
			android:id="@+id/tvMaxAmplitude"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_max_amplitude"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/tvExplanationMinimumLevel"
			android:layout_marginTop ="10dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			/>

	<SeekBar
		   android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="max. Volume"
			android:max="50000"
			android:progress="10000"
			android:id="@+id/SeekBarMax"
			android:layout_below="@+id/tvMaxAmplitude"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<TextView
			android:id="@+id/tvExplanationMaximumLevel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvExplanationMaximumLevel"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/SeekBarMax"
	/>

	<TextView
			android:id="@+id/tvMinRingerVolume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_min_ringer_volume"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/tvExplanationMaximumLevel"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_marginTop="20dp"
			/>

	<SeekBar
			android:id="@+id/SeekBarMinRingerVolume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="6"
			android:progress="1"
			android:layout_below="@+id/tvMinRingerVolume"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<TextView
			android:id="@+id/tvPocketVolume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tvPocketVolume"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/SeekBarMinRingerVolume"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_marginTop="20dp"
			/>

	<SeekBar
			android:id="@+id/SeekBarPocketVolume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="6"
			android:progress="1"
			android:layout_below="@+id/tvPocketVolume"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<LinearLayout
		android:orientation="vertical"
		android:id="@+id/llProFeatures"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/SeekBarPocketVolume"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		>

	<View
		android:id="@+id/divider1"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:layout_margin="20dp"
		android:background="#C2C2C2"
		/>

	<TextView
			android:id="@+id/tvControllers"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvControllers"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/divider1"
			android:layout_marginBottom="10dp"
	/>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llHandleVibration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvControllers"
		android:layout_marginLeft="20dp">

		<TextView
			android:id="@+id/tvHandleVibration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/switch_handle_vibration"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/SwitchHandleVibration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llHandleNotification"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/llHandleVibration"
		android:layout_marginLeft="20dp">


		<TextView
			android:id="@+id/tvHandleNotification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/switch_handle_notification"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/SwitchHandleNotification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<RelativeLayout
		android:orientation="horizontal"
		android:id="@+id/llAccessibilityButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/llHandleNotification"
		>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/buttonAccessibilitySettings"
			android:text="@string/buttonAccessibilitySettings"
			android:onClick="buttonClicked"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"/>

	</RelativeLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llBrokenProximitySensor"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_below="@+id/llAccessibilityButton">

		<TextView
			android:id="@+id/tvBrokenProximitySensor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvBrokenProximitySensor"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<CheckBox
			android:id="@+id/cbBrokenProximitySensor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<View
		android:id="@+id/divider2"
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:layout_margin="20dp"
		android:background="#C2C2C2"
		android:layout_below="@+id/llBrokenProximitySensor" />

	<TextView
			android:id="@+id/tvInCallActions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvInCallActions"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/divider2"
			android:layout_marginBottom="10dp"
	/>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llFlipAction"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvInCallActions"
		android:layout_marginLeft="10dp"
		>

		<TextView
			android:id="@+id/tvFlipAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvFlipAction"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/switchFlipAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llAutoReactivateRingerMode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="20dp"
		android:layout_below="@+id/llFlipAction">

		<TextView
			android:id="@+id/tvAutoReactivateRingerMode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvAutoReactivateRingerMode"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<CheckBox
			android:id="@+id/cbAutoReactivateRingerMode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<TextView
			android:id="@+id/tvReduceVolume"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvReduceVolume"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/llReactivateRingerMode"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="10dp"
	/>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llShakeAction"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvReduceVolume"
		android:layout_marginLeft="20dp">

		<TextView
			android:id="@+id/tvShakeAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvShakeAction"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/switchShakeAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llPullOutAction"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/llShakeAction"
		android:layout_marginLeft="20dp"
		android:layout_marginBottom="20dp">

		<TextView
			android:id="@+id/tvPullOutAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvPullOutAction"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/switchPullOutAction"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>
	</LinearLayout>
<!--
	 End of llProFeatures
-->
</RelativeLayout>
</ScrollView>
