<?xml version="1.0" encoding="utf-8"?>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".NotifyMe">
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".NotifyMe">

<!--
	<android.support.v4.view.ViewPager
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
-->

	<Switch
			android:id="@+id/switchEnable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>


	<TextView
			android:id="@+id/tvMinAmplitude"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_min_amplitude"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/switchEnable"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			/>

	<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="min. Volume"
			android:max="10000"
			android:progress="1000"
			android:id="@+id/SeekBarMin"
			android:layout_below="@+id/tvMinAmplitude"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<TextView
			android:id="@+id/tvMaxAmplitude"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_max_amplitude"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/SeekBarMin"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			/>

	<SeekBar
		   android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="max. Volume"
			android:max="50000"
			android:progress="10000"
			android:id="@+id/SeekBarMax"
			android:layout_below="@+id/tvMaxAmplitude"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<TextView
			android:id="@+id/tvMinRingerVolume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/setting_min_ringer_volume"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/SeekBarMax"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			/>

	<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="6"
			android:progress="1"
			android:id="@+id/SeekBarMinRingerVolume"
			android:layout_below="@+id/tvMinRingerVolume"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
	/>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llHandleNotification"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/SeekBarMinRingerVolume">


		<TextView
			android:id="@+id/tvHandleNotification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/switch_handle_notification"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/SwitchHandleNotification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/llHandleVibration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/llHandleNotification">

		<TextView
			android:id="@+id/tvHandleVibration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/switch_handle_vibration"
			android:layout_weight="1"
			android:scrollHorizontally="false"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentLeft="true"
		/>

		<Switch
			android:id="@+id/SwitchHandleVibration"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:enabled="true"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_alignParentRight="true"
		/>
	</LinearLayout>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Set Volume"
			android:id="@+id/btnClearNotify"
			android:onClick="buttonClicked"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/llHandleVibration"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"/>


	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Send test notification"
			android:id="@+id/btnTestNotify"
			android:onClick="buttonClicked"
			android:textAppearance="?android:attr/textAppearance"
			android:layout_below="@+id/btnClearNotify"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"/>

	<ScrollView android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_alignParentBottom="true"
				android:layout_below="@+id/btnTestNotify"
				android:layout_alignLeft="@+id/btnTestNotify">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text=""
				android:id="@+id/textView"
				/>


	</ScrollView>

</RelativeLayout>
